PR #893 の1.20.1固有補正