@@ -5,7 +5,6 @@ import io.redspace.ironsspellbooks.api.magic.MagicData;
 import io.redspace.ironsspellbooks.api.spells.CastSource;
 import jp.aquafactory.apprenticecodex.damage.DamageTypes;
 import jp.aquafactory.apprenticecodex.effect.BloodEngravedEffect;
-import jp.aquafactory.apprenticecodex.registry.AttachmentRegistry;
 import jp.aquafactory.apprenticecodex.registry.EffectRegistry;
 import jp.aquafactory.apprenticecodex.registry.SpellRegistry;
 import jp.aquafactory.apprenticecodex.spell.bloodbrand.BloodBrand;
@@ -24,8 +23,8 @@ import net.minecraft.world.entity.animal.Cow;
 import net.minecraft.world.entity.monster.Zombie;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.phys.Vec3;
-import net.neoforged.neoforge.common.util.FakePlayer;
-import net.neoforged.neoforge.event.tick.EntityTickEvent;
+import net.minecraftforge.common.util.FakePlayer;
+import net.minecraftforge.event.entity.living.LivingEvent;
 
 import java.util.UUID;
 
@@ -46,7 +45,7 @@ final class BloodBrandGameTestScenarios {
 
         var projectiles = level.getEntitiesOfClass(BloodBrandKunai.class, owner.getBoundingBox().inflate(4.0D));
         helper.assertTrue(projectiles.size() == 1, "Blood Brand should spawn exactly one kunai");
-        var projectile = projectiles.getFirst();
+        var projectile = projectiles.get(0);
         helper.assertTrue(Math.abs(projectile.getDeltaMovement().length() - BloodBrandKunai.SPEED) < VALUE_EPSILON,
                 "Blood Brand kunai should use its configured launch speed");
         helper.assertTrue(Math.abs(projectile.getDamageForGameTest() - spell.getDamage(1, owner)) < VALUE_EPSILON,
@@ -74,26 +73,26 @@ final class BloodBrandGameTestScenarios {
         var spell = (BloodBrand) SpellRegistry.BLOOD_BRAND.get();
 
         spell.onCast(level, 1, owner, CastSource.SPELLBOOK, MagicData.getPlayerMagicData(owner));
-        var projectile = level.getEntitiesOfClass(BloodBrandKunai.class, owner.getBoundingBox().inflate(4.0D)).getFirst();
+        var projectile = level.getEntitiesOfClass(BloodBrandKunai.class, owner.getBoundingBox().inflate(4.0D)).get(0);
         for (var tick = 0; tick < 4 && !projectile.isRemoved(); ++tick) {
             projectile.tick();
         }
 
         helper.assertTrue(projectile.isRemoved(), "Blood Brand kunai should be consumed after hitting a mob");
-        var engraved = target.getEffect(EffectRegistry.BLOOD_ENGRAVED);
+        var engraved = target.getEffect(EffectRegistry.BLOOD_ENGRAVED.get());
         helper.assertTrue(engraved != null,
                 "Blood Brand damage should apply Blood Engraved to a mob");
         helper.assertTrue(engraved != null && engraved.isVisible(),
                 "Blood Engraved should expose potion particles and HUD integrations");
-        var state = target.getExistingDataOrNull(AttachmentRegistry.BLOOD_BRAND_STATE);
+        var state = BloodBrandState.get(target);
         helper.assertTrue(state != null && state.casterUuid().equals(owner.getUUID()),
                 "Blood Engraved should remember the last successful caster");
         helper.assertTrue(state != null && BloodBrandState.load(state.save()).equals(state),
                 "Blood Brand state should survive its persistent NBT round trip");
 
-        target.removeEffect(EffectRegistry.BLOOD_ENGRAVED);
-        BloodBrandEvents.onEntityTick(new EntityTickEvent.Post(target));
-        helper.assertTrue(target.getExistingDataOrNull(AttachmentRegistry.BLOOD_BRAND_STATE) == null,
+        target.removeEffect(EffectRegistry.BLOOD_ENGRAVED.get());
+        BloodBrandEvents.onEntityTick(new LivingEvent.LivingTickEvent(target));
+        helper.assertTrue(BloodBrandState.get(target) == null,
                 "Blood Brand state should be removed after Blood Engraved expires");
 
         discardAll(target, owner);
@@ -115,14 +114,14 @@ final class BloodBrandGameTestScenarios {
         var ownerHealth = owner.getHealth();
 
         spell.onCast(level, 1, owner, CastSource.SPELLBOOK, MagicData.getPlayerMagicData(owner));
-        var projectile = level.getEntitiesOfClass(BloodBrandKunai.class, owner.getBoundingBox().inflate(4.0D)).getFirst();
+        var projectile = level.getEntitiesOfClass(BloodBrandKunai.class, owner.getBoundingBox().inflate(4.0D)).get(0);
         for (var tick = 0; tick < 4 && !projectile.isRemoved(); ++tick) {
             projectile.tick();
         }
 
         var burstDamage = nearbyHealth - nearby.getHealth();
         helper.assertTrue(!target.isAlive(), "A lethal Blood Brand kunai should kill its direct target");
-        helper.assertTrue(target.getExistingDataOrNull(AttachmentRegistry.BLOOD_BRAND_STATE) == null,
+        helper.assertTrue(BloodBrandState.get(target) == null,
                 "A lethal Blood Brand kunai should not leave state on its dead direct target");
         helper.assertTrue(burstDamage > 0.0F, "A lethal Blood Brand kunai should burst around its direct target");
         helper.assertTrue(Math.abs(owner.getHealth() - (ownerHealth + burstDamage * 0.5F)) < VALUE_EPSILON,
@@ -210,7 +209,7 @@ final class BloodBrandGameTestScenarios {
 
         helper.assertTrue(Math.abs(nearby.getHealth() - nearbyHealth) < VALUE_EPSILON,
                 "Blood Brand should not burst when its caster cannot be resolved");
-        helper.assertTrue(origin.getExistingDataOrNull(AttachmentRegistry.BLOOD_BRAND_STATE) == null,
+        helper.assertTrue(BloodBrandState.get(origin) == null,
                 "An unresolved Blood Brand should still consume its stored state");
 
         discardAll(origin, nearby);
@@ -219,14 +218,14 @@ final class BloodBrandGameTestScenarios {
 
     private static void mark(LivingEntity target, UUID casterUuid, float damage, double range) {
         target.addEffect(new MobEffectInstance(
-                EffectRegistry.BLOOD_ENGRAVED,
+                EffectRegistry.BLOOD_ENGRAVED.get(),
                 BloodEngravedEffect.DURATION_TICKS,
                 0,
                 false,
                 true,
                 true
         ));
-        target.setData(AttachmentRegistry.BLOOD_BRAND_STATE, new BloodBrandState(casterUuid, damage, range));
+        BloodBrandState.set(target, new BloodBrandState(casterUuid, damage, range));
     }
 
     private static Vec3 testOrigin(GameTestHelper helper) {
